objects/SGR_Note__c.object
<CustomObject>
    <description>capture notes information from GSPS plans</description>
    <fields>
        <fullName>Benefit_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Benefit Header</label>
        <referenceTo>Benefit_Header__c</referenceTo>
        <relationshipName>Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Mapped Benefit Header Id</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Symbol__c</fullName>
        <label>Symbol</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Plan Note</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Note Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plan Notes</pluralLabel>
    <recordTypes>
        <fullName>Note_Record_Type</fullName>
        <active>true</active>
        <label>Note Record Type</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>